--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/calvin.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .container{
     padding: 10px 10%;
