--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ body{
     background: #080808;
     color: #fff;
 }
-#header{
+#header {
     width: 100%;
     height: 100vh;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 .container{
     padding: 10px 10%;
@@ -71,6 +72,24 @@ nav ul li a:hover::after{
 .header-text h1 span{
     color: #ff004f;
 }
+
+#typing-text {
+    font-size: 30px;
+    font-weight: bold;
+    color: #ff004f;
+    border-right: 3px solid #ff004f; /* Cursor effect */
+    padding-right: 8px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    animation: blink 0.8s infinite;
+}
+
+/* Cursor Blinking Animation */
+@keyframes blink {
+    50% { border-color: transparent; }
+}
+
 
 /* -----------about--------------- */
 #about{
