--- a/style.css
+++ b/style.css
@@ -108,31 +108,51 @@ nav {
 }
 
 
-/* -----------about--------------- */
-#about{
-    padding: 80px 0;
+/* ----------- About Section --------------- */
+#about {
+    padding: 100px 0; /* Increased padding for more spacing */
     color: #ababab;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1{
+
+.about-col-1 {
     flex-basis: 35%;
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col-2{
+
+.about-col-2 {
     flex-basis: 60%;
 }
-.sub-title{
-    font-size: 60px;
-    font-weight: 600;
+
+/* Title Styling */
+.sub-title {
+    font-size: 70px; /* Increased size */
+    font-weight: 700;
     color: #fff;
+    margin-bottom: 20px; /* Added spacing */
 }
+
+/* Paragraph Styling */
+.about-col-2 p {
+    font-size: 20px; /* Increased size */
+    line-height: 1.8; /* Increased line spacing */
+    margin-bottom: 15px; /* Added spacing between paragraphs */
+}
+
+/* Highlighted Text */
+.about-col-2 strong {
+    color: #fff; /* Ensure strong elements stand out */
+}
+
 
 /* Common button styling */
 .button {
