--- a/style.css
+++ b/style.css
@@ -230,10 +230,10 @@ nav {
 /* Bubble Style */
 .bubble {
     position: absolute;
-    bottom: -50px; /* Start slightly off-screen */
+    bottom: -50px;
     width: 20px;
     height: 20px;
-    background-color: rgba(0, 255, 0, 0.5); /* Light green */
+    background-color: rgba(0, 77, 0, 0.7);
     border-radius: 50%;
     animation: float 6s linear infinite;
     opacity: 0.7;
