--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html, body {
 #header {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: rgba(0,0,0, 0.85);
     display: flex;
     align-items: center;
     justify-content: center;
