--- a/style.css
+++ b/style.css
@@ -37,13 +37,14 @@ html, body {
     background-color: rgba(0,0,0, 0.85);
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: flex-start;
+    text-align: left;
     padding-top: 80px;
+    padding-left: 10%;
+    position: relative;
 }
 .container{
     padding: 10px 10%;
-    text-align: center;
 }
 
 /* ===== HERO BACKGROUND (Particles Only for Header) ===== */
