page centered and modifying welcome text

--- a/style.css
+++ b/style.css
@@ -38,13 +38,22 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    text-align: left;
+    text-align: center;
     padding-top: 80px;
     padding-left: 10%;
     position: relative;
 }
 .container{
     padding: 10px 10%;
+    text-align: center;
+}
+
+/* syling for Hi my name is*/
+.intro-greeting {
+    font-size: 18px;
+    color: #ccc;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
 }
 
 /* ===== HERO BACKGROUND (Particles Only for Header) ===== */
