--- a/style.css
+++ b/style.css
@@ -38,11 +38,12 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    text-align: center;
+    text-align: left;
     padding-top: 80px;
     padding-left: 10%;
     position: relative;
 }
+
 .container{
     padding: 10px 10%;
     text-align: center;
@@ -50,7 +51,8 @@ html, body {
 
 /* syling for Hi my name is*/
 .intro-greeting {
-    font-size: 18px;
+    font-size: 24px;
+    font-weight: 500;
     color: #ccc;
     margin-bottom: 10px;
     letter-spacing: 1px;
